--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "nodemon": "^2.0.22",
     "sucrase": "^3.32.0"
+  },
+  "scripts": {
+    "dev": "nodemon ./src/server.js"
   }
 }
