--- a/package.json
+++ b/package.json
@@ -2,17 +2,11 @@
   "name": "minimo-dev-junior",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Josué R.S. Jacinto",
+  "repository": "https://github.com/Jreng7/minimo-dev-junior.git",
+  "author": "Josué R S Jacinto <jr.waydev@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22",
-    "sucrase": "^3.32.0"
-  },
-  "scripts": {
-    "dev": "nodemon ./src/server.js"
   }
 }
