--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22",
+    "sucrase": "^3.32.0"
+  },
+  "scripts": {
+    "dev": "nodemon ./src/server.js"
   }
 }
